--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "axios": "^0.21.1",
     "discord.js": "^12.5.3",
     "express": "^4.17.1",
-    "node-cron": "^2.0.3",
-    "node-fetch": "^2.6.1"
+    "node-cron": "^2.0.3"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/swethashaja/cowinbot123.git"
